@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|' on
+# the right side marks the last column you can put a character in. You must make
+# exactly 11 lines for the formatting to be correct.  It's also customary to
+# leave one space after the ':'.
+
+     |-----handy-ruler------------------------------------------------------|
+cmake: CMake (cross-platform, open-source make system)
+cmake:
+cmake: CMake is used to control the software process using simple platform
+cmake: and compiler independent configuration files. CMake generates
+cmake: native makefiles and workspaces that can be used in the
+cmake: compiler environment of your choice.
+cmake:
+cmake: CMake's home on the web is:  http://www.cmake.org
+cmake:
+cmake:
+cmake:
