@@ -1,0 +1,1 @@
+3e581954a6d82babfe6489905d0039c8  kdelibs-4.10.5.tar.xz
